--- a/discovery_piscine/cell01/ex01/piscineweb.html
+++ b/discovery_piscine/cell01/ex01/piscineweb.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Piscine Web</title>
 </head>
 <body>
-    Hello World
+    <center><h1>Piscine Web</h1></center>
 </body>
 </html>
