Format CSS styles for image element

--- a/discovery_piscine/cell01/ex02/piscineweb.html
+++ b/discovery_piscine/cell01/ex02/piscineweb.html
@@ -9,8 +9,8 @@
         }
         img {
             display: block;
-            margin: 20px auto; /* จัดกึ่งกลางรูปและเว้นระยะห่าง */
-            max-width: 300px;  /* คุมขนาดไม่ให้ใหญ่เกินไป */
+            margin: 20px auto;
+            max-width: 300px;
         }
     </style>
 </head>
