--- a/discovery_piscine/cell01/ex02/piscineweb.html
+++ b/discovery_piscine/cell01/ex02/piscineweb.html
@@ -10,7 +10,7 @@
         img {
             display: block;
             margin: 20px auto;
-            max-width: 300px;
+            width: 300px;
         }
     </style>
 </head>
