--- a/discovery_piscine/cell01/ex03/piscineweb.html
+++ b/discovery_piscine/cell01/ex03/piscineweb.html
@@ -11,10 +11,10 @@
 <body>
     <h1>Piscine Web</h1>
     <a href="https://www.youtube.com/watch?v=INscMGmhmX4" target="_blank">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgHxo6r9QjV0rnicPlKTze0ydDbcHr32-QwQ&s">
+        <img src="https://troubleandtrix.com/media/ntapzaka/healthy-cat-signs-1240x640.jpg?anchor=center&mode=crop&width=1238&height=640&rnd=132509989237370000">
     </a>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1" target="_blank">
-    <img src="https://pbs.twimg.com/media/G-x_IfmacAA8DJM.jpg">
+    <img src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_16x9.jpg?w=1200">
     </a>
 </body>
 </html>
