--- a/discovery_piscine/cell02/ex02/parallax.html
+++ b/discovery_piscine/cell02/ex02/parallax.html
@@ -9,12 +9,12 @@
 
     <div class="parallax-img1">
         <div class="caption">
-            <span>Hello Parallax World!</span>
+            <span>Hello Parallax</span>
         </div>
     </div>
 
     <div class="static-block">
-        <p>This is a static black block.</p>
+        <p>black block.</p>
     </div>
 
     <div class="parallax-img2">
