--- a/discovery_piscine/cell02/ex03/card.html
+++ b/discovery_piscine/cell02/ex03/card.html
@@ -1,35 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>User Profile Card</title>
     <link rel="stylesheet" href="card.css">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-    <div class="card-container">
-        
-        <h2 class="card-title">User Profile Card</h2>
+    <div class="main-container">
+        <h1 class="page-title">User Profile Card</h1>
 
-        <table class="profile-table">
-            <tr>
-                <td>
-                    <img src="https://scontent.fbkk5-1.fna.fbcdn.net/v/t1.6435-9/160414386_2495392624089643_8123321521391218403_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeENGj6pkw4b5Vi2Fw9jy3_l4iXuopaDtZTiJe6iloO1lGyJTZk_hh7dK-xUL5xDW7hUL6SMB1x-MOqHXinNpUIa&_nc_ohc=Faf7WEE9tHYQ7kNvwGmBgfy&_nc_oc=AdniwjAG98617vsqM287Jt_I6bifjjH-CS4eVb1UQcFn028InRZMzR8yV-calxbr_HdWLc8p0r0qs8Y67tYxYNcF&_nc_zt=23&_nc_ht=scontent.fbkk5-1.fna&_nc_gid=HOmfcy7u3QFyhcyz6uHPjQ&oh=00_AfsfDzmSoEYAnyzbXQJ8-nBZtPuJ3aq1rUmGwhhVNDCzUg&oe=69A91D58" alt="Profile" class="profile-pic">
-                </td>
-            </tr>
-            <tr>
-                <td class="login-name">Sun 20</td>
-            </tr>
-            <tr>
-                <td class="description">Student @Computer Science KMITL</td>
-            </tr>
-            <tr>
-                <td class="social-icons">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-github"></i>
-                </td>
-            </tr>
-            <tr>
-                <td>
+        <div class="card">
+            <table class="profile-layout">
+                <tr>
+                    <td class="img-cell">
+                        <img src="https://avatars.githubusercontent.com/u/18587427?v=4" alt="Profile" class="profile-img">
+                    </td>
+                </tr>
+                
+                <tr>
+                    <td class="info-cell">
+                        <h2 class="login-name">Sun 20</h2>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="info-cell">
+                        <p class="desc">Student @ Computer Science KMITL</p>
+                        <p class="sub-desc">42 Bangkok</p>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="info-cell">
+                        <div class="social-icons">
+                            <i class="fa-solid fa-globe icon"></i>
+                            <i class="fa-brands fa-twitter icon"></i>
+                            <i class="fa-brands fa-linkedin icon"></i>
+                            <i class="fa-brands fa-facebook-f icon"></i>
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="btn-cell">
+                        <button class="contact-btn">Contact</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+</body>
+</html>
