--- a/discovery_piscine/cell03/ex04/ex01bis/balloon.html
+++ b/discovery_piscine/cell03/ex04/ex01bis/balloon.html
@@ -5,8 +5,20 @@
     <title>jQuery Balloon</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        body { display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        #balloon { width: 200px; height: 200px; background-color: red; border-radius: 50%; cursor: pointer; }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #balloon {
+            width: 200px;
+            height: 200px;
+            background-color: red;
+            border-radius: 50%;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
