--- a/discovery_piscine/cell03/ex04/ex03bis/todo.html
+++ b/discovery_piscine/cell03/ex04/ex03bis/todo.html
@@ -5,8 +5,17 @@
     <title>jQuery To Do</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        body { padding: 20px; font-family: sans-serif; }
-        .todo-item { background: #f4f4f4; border: 1px solid #ddd; padding: 10px; margin-bottom: 5px; cursor: pointer; }
+        body { padding: 20px;
+            font-family:
+            sans-serif;
+        }
+        .todo-item { 
+            background: #f4f4f4;
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-bottom: 5px;
+            cursor: pointer;
+        }
         .todo-item:hover { background: #e9e9e9; }
     </style>
 </head>
