--- a/discovery_piscine/Rush/cv_1.html
+++ b/discovery_piscine/Rush/cv_1.html
@@ -89,12 +89,12 @@
         <div class="container">
             <h2 class="mb-4">Contact Me</h2>
             <div class="d-flex justify-content-center gap-4 fs-1">
-                <a href="#" class="text-white"><i class="fab fa-github"></i></a>
-                <a href="#" class="text-white"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="text-white"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com" target="_blank" class="text-white"><i class="fab fa-github"></i></a>
+                <a href="https://www.facebook.com" target="_blank" class="text-white"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.linkedin.com" target="_blank" class="text-white"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:test@example.com" class="text-white"><i class="fas fa-envelope"></i></a>
             </div>
-            <p class="mt-4 text-muted">&copy; 2026 Rush Project</p>
+            <p class="mt-4 text-white">&copy; 2026 Rush Project</p>
         </div>
     </section>
 
